--- a/app/src/index.css
+++ b/app/src/index.css
@@ -3,18 +3,21 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0 ;
 }
 
 html {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
     height: 100%;
     width: 100%;
     margin: 0px;
-}
+  }
 
 /* width */
 ::-webkit-scrollbar {
@@ -35,3 +38,25 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+
+#bg-image {
+      /* The image used */
+      background-image: url("../public/444419.jpg");
+    
+      /* Add the blur effect */
+      filter: blur(8px);
+      -webkit-filter: blur(8px);
+    
+      /* Full height */
+      height: 100%;
+    
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      z-index: -1;
+}
+
+.light-teal {
+  background-color: rgba(0,0,0, 0.4);
+}
