--- a/app/src/index.css
+++ b/app/src/index.css
@@ -41,7 +41,7 @@ body {
 
 #bg-image {
       /* The image used */
-      background-image: url("../public/444419.jpg");
+      background-image: url("../public/background.jpg");
     
       /* Add the blur effect */
       filter: blur(8px);
